--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_background_service: ^5.0.3
   flutter_background_service_android: ^6.2.0
   permission_handler: ^11.0.1
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
